# II_lib_managment

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  guide_graphRAG.txt  gunicorn_conf.py  pyproject.toml
migrations/: env.py
migrations/versions/: 3890858deba0_chat.py  4b9ded0a0ea3_initial_migration.py  a6e89db8b14e_add_chunks_count_to_documents.py  c9b7d4a1b2ce_add_file_size_to_documents.py  eb9694333fdd_documents.py
nginx/: nginx.conf
rag_storage/default/: graph_chunk_entity_relation.graphml
src/: main.py
src/core/: __init__.py  config.py  exceptions.py  logging.py
src/db/: __init__.py  base_dao.py  base_model.py  session.py
src/frontend/: index.html
src/frontend/assets/: app.js  styles.css
src/modules/: __init__.py
src/modules/agents/: __init__.py  dependencies.py  routers.py  schemas.py  services.py  state.py  tools.py  workflow.py
src/modules/chat/: __init__.py  dao.py  dependencies.py  models.py  routers.py  schemas.py  services.py
src/modules/documents/: __init__.py  dao.py  (+8 more)
tests/: conftest.py  test_agents_routers.py  test_agents_service.py  test_base_dao.py  test_chat_dao.py  test_chat_routers.py  test_chat_schemas.py  test_chat_service.py  test_core_exceptions.py  test_core_logging.py  test_documents_chunking.py  test_documents_dao.py  test_documents_parser.py  test_documents_routers.py  test_documents_schemas.py  test_documents_service.py  test_llm_integration.py  test_rag_service.py  test_request_logging.py  test_users_dao.py  test_users_routers.py  test_users_schemas.py  test_users_service.py
(+20 files in other folders)
